fixed alignment of supercharge items

--- a/css/main.css
+++ b/css/main.css
@@ -191,31 +191,35 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.supercharge__grid {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(3, 1fr);
+.supercharge__flexContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
 }
-.supercharge__gridItem {
-  display: grid;
+.supercharge__flexItem {
+  display: flex;
+  flex-direction: column;
   grid-template-rows: 5rem 10rem;
   grid-template-columns: 1fr;
-  gap: 3rem;
   align-items: center;
   text-align: center;
   max-width: 35rem;
 }
-.supercharge__gridContent {
+.supercharge__icon-container {
+  height: 4.5rem;
+}
+.supercharge__flexContent {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
-.supercharge__gridContent h3 {
+.supercharge__flexContent h3 {
   font-size: 2.4rem;
-  margin-top: 0;
+  margin-top: 3rem;
   margin-bottom: 2rem;
 }
-.supercharge__gridContent p {
+.supercharge__flexContent p {
   font-size: 1.6rem;
   color: hsl(201, 11%, 66%);
 }
