--- a/scss/layout/_supercharge.scss
+++ b/scss/layout/_supercharge.scss
@@ -1,30 +1,35 @@
 .supercharge {
     @include flexbox-center;
 
-    &__grid {
-        display: grid;
-        width: 100%;
-        grid-template-columns: repeat(3, 1fr);
+    &__flexContainer {
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
     }
 
-    &__gridItem {
-        display: grid;
+    &__flexItem {
+        display: flex;
+        flex-direction: column;
         grid-template-rows: 5rem 10rem;
         grid-template-columns: 1fr;
-        gap: 3rem;
         align-items: center;
         text-align: center;
         max-width: 35rem;
     }
 
-    &__gridContent {
+    &__icon-container {
+        height: 4.5rem;
+    }
+
+    &__flexContent {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        align-items: center;
 
         h3 {
             font-size: 2.4rem;
-            margin-top: 0;
+            margin-top: 3rem;
             margin-bottom: 2rem;
         }
 
